# fonts

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs  tracer.rs
src/crawler/: browser_crawler.rs  css_parser.rs  html_parser.rs  http_crawler.rs  mod.rs
src/font_parser/: mod.rs  parser.rs  woff_parser.rs
src/parsers/: css_parser.rs  html_parser.rs  mod.rs  url_parser.rs
src/tasks/: channel_message.rs  html_browser.rs  html_http.rs  mod.rs  page.rs  sender.rs  verifier.rs
test_files/: test_base64_url.css  test_check_src_parsing.css  test_ense.html  test_iterateno.html  test_mindjek.css  test_nrk.css  test_nrkno.html  test_urls.txt
