[package]
name = "fonts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
eyre = "0.6.8"
reqwest = {version = "0.11.14", features = ["gzip", "brotli"]}
tokio = {version = "1.25.0", features = ["full"]}
scraper = "0.14.0"
once_cell = "1.17.0"
maplit = "1.0.2"
regex = "1.7.1"
url = "2.3.1"
flume = "0.10.14"
thiserror = "1.0.38"
headless_chrome = "1.0.5"
async-trait = "0.1.66"